--- a/src/themes/base/_base.scss
+++ b/src/themes/base/_base.scss
@@ -1,12 +1,12 @@
 // General application styling rules
+
 html {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 *,
-*:before,
-*:after {
-	box-sizing: inherit;
+*::after,
+*::before {
+    box-sizing: inherit;
 }
-
 $browser-context: 16px;
