--- a/src/themes/material/extends/_progress.scss
+++ b/src/themes/material/extends/_progress.scss
@@ -18,7 +18,16 @@
 }
 
 %progressbar--striped > div {
-    background-image: linear-gradient(45deg, $progressbar-stripe-color 25%, transparent 25%, transparent 50%, $progressbar-stripe-color 50%, $progressbar-stripe-color 75%, transparent 75%, transparent);
+    background-image: linear-gradient(
+        45deg,
+        $progressbar-stripe-color 25%,
+        transparent 25%,
+        transparent 50%,
+        $progressbar-stripe-color 50%,
+        $progressbar-stripe-color 75%,
+        transparent 75%,
+        transparent
+    );
     -webkit-background-size: 40px 40px;
     background-size: 40px 40px;
 }
