--- a/src/themes/material/extends/_tab.scss
+++ b/src/themes/material/extends/_tab.scss
@@ -88,7 +88,6 @@
     }
 }
 
-%igx-tab-label--selected,
-%igx-tab-icon--selected {
+%igx-tab-label--selected, %igx-tab-icon--selected {
     @extend %igx-active-tab;
 }
