--- a/src/themes/material/modules/_typography.scss
+++ b/src/themes/material/modules/_typography.scss
@@ -13,12 +13,7 @@ html {
     -webkit-font-smoothing: antialiased;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
     font-weight: $font-weight-headings;
 }
 
