Change the color to the one in specified in config.

--- a/src/themes/material/extends/_card.scss
+++ b/src/themes/material/extends/_card.scss
@@ -86,7 +86,7 @@
 %igx-card-actions-igroup {
     display: flex;
     flex-flow: row nowrap;
-    color: $gray-opaque-54;
+    color: $card-actions-igroup-color;
 }
 
 %igx-card-actions-igroup--start {
