Change the hover color to darkgray.

--- a/src/themes/material/extends/_grid.scss
+++ b/src/themes/material/extends/_grid.scss
@@ -57,7 +57,7 @@
 
 %grid-row--selected td {
     color: $white;
-    background-color: $off-black;
+    background-color: $darkgray;
 }
 
 %grid-cell-display {
