Update samples to match the new gray colors.

--- a/demos/app/badge/sample.component.html
+++ b/demos/app/badge/sample.component.html
@@ -33,19 +33,19 @@
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar initials="AZ" bgColor="#D1D1D1" color="#484848">
+                    <igx-avatar initials="AZ" bgColor="#BDBDBD" color="#484848">
                         <igx-badge type="warning" position="bottom-right" icon="info_outline"></igx-badge>
                     </igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar initials="AZ" bgColor="#D1D1D1" color="#484848" roundShape="true" size="medium">
+                    <igx-avatar initials="AZ" bgColor="#BDBDBD" color="#484848" roundShape="true" size="medium">
                         <igx-badge type="success" position="top-left" value="72"></igx-badge>
                     </igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar initials="AZ" bgColor="#D1D1D1" color="#484848" size="large">
+                    <igx-avatar initials="AZ" bgColor="#BDBDBD" color="#484848" size="large">
                         <igx-badge type="info" position="bottom-right" icon="star"></igx-badge>
                     </igx-avatar>
                 </div>
