--- a/demos/app/avatar/sample.component.html
+++ b/demos/app/avatar/sample.component.html
@@ -13,27 +13,29 @@
             <h4 class="sample-title">Circular Avatars</h4>
             <article class="avatars-wrapper">
                 <div class="avatar-sample">
-                    <igx-avatar color="gray" [roundShape]="'true'" color="#484848"></igx-avatar>
+                    <igx-avatar [roundShape]="'true'" color="#424242"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar color="gray" [roundShape]="'true'" color="#484848" size="medium"></igx-avatar>
+                    <igx-avatar [roundShape]="'true'"
+                    color="#424242" size="medium"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar color="gray" [roundShape]="'true'" color="#484848" size="large"></igx-avatar>
+                    <igx-avatar [roundShape]="'true'"
+                    color="#424242" size="large"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar initials="AZ" [roundShape]="'true'" bgColor="#D1D1D1" color="#484848"></igx-avatar>
+                    <igx-avatar initials="AZ" [roundShape]="'true'" bgColor="#BDBDBD" color="#424242"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar initials="AZ" [roundShape]="'true'" bgColor="#D1D1D1" color="#484848" size="medium"></igx-avatar>
+                    <igx-avatar initials="AZ" [roundShape]="'true'" bgColor="#BDBDBD" color="#424242" size="medium"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar initials="AZ" [roundShape]="'true'" bgColor="#D1D1D1" color="#484848" size="large"></igx-avatar>
+                    <igx-avatar initials="AZ" [roundShape]="'true'" bgColor="#BDBDBD" color="#424242" size="large"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
@@ -55,27 +57,27 @@
             <h4 class="sample-title">Square Icons</h4>
             <article class="avatars-wrapper">
                 <div class="avatar-sample">
-                    <igx-avatar color="gray" color="#484848"></igx-avatar>
+                    <igx-avatar color="gray" color="#424242"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar color="gray" color="#484848" size="medium"></igx-avatar>
+                    <igx-avatar color="gray" color="#424242" size="medium"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar color="gray" color="#484848" size="large"></igx-avatar>
+                    <igx-avatar color="gray" color="#424242" size="large"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar initials="AZ" bgColor="#D1D1D1" color="#484848"></igx-avatar>
+                    <igx-avatar initials="AZ" bgColor="#BDBDBD" color="#424242"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar initials="AZ" bgColor="#D1D1D1" color="#484848" size="medium"></igx-avatar>
+                    <igx-avatar initials="AZ" bgColor="#BDBDBD" color="#424242" size="medium"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar initials="AZ" bgColor="#D1D1D1" color="#484848" size="large"></igx-avatar>
+                    <igx-avatar initials="AZ" bgColor="#BDBDBD" color="#424242" size="large"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
