--- a/src/themes/utilities/_functions.scss
+++ b/src/themes/utilities/_functions.scss
@@ -16,8 +16,50 @@
 // @access public
 // @param {string} $color - Source color
 // @param {number|string} $saturation - Target color variation
+// @function gen-color($color, $saturation) {
+//     @if ($saturation==50) {
+//         @return lighten(saturate($color, 10.4), 37.7);
+//     }
+//     @else if ($saturation==100) {
+//         @return lighten(desaturate($color, 10.4), 31.8);
+//     }
+//     @else if ($saturation==200) {
+//         @return lighten(desaturate($color, 17), 18.7);
+//     }
+//     @else if ($saturation==300) {
+//         @return lighten(desaturate($color, 20.9), 9.1);
+//     }
+//     @else if ($saturation==400) {
+//         @return lighten(desaturate($color, 6.6), 4.1);
+//     }
+//     @else if ($saturation==600) {
+//         @return darken(desaturate($color, 12.4), 3.1);
+//     }
+//     @else if ($saturation==700) {
+//         @return darken(desaturate($color, 24.5), 7.8);
+//     }
+//     @else if ($saturation==800) {
+//         @return darken(desaturate($color, 23.2), 11.7);
+//     }
+//     @else if ($saturation==900) {
+//         @return darken(desaturate($color, 16.1), 17);
+//     }
+//     @else if ($saturation=='A100') {
+//         @return lighten(saturate($color, 10.4), 16.7);
+//     }
+//     @else if ($saturation=='A200') {
+//         @return lighten(saturate($color, 10.4), 7.7);
+//     }
+//     @else if ($saturation=='A400') {
+//         @return darken(saturate($color, 10.4), 3.9);
+//     }
+//     @else if ($saturation=='A700') {
+//         @return darken(saturate($color, 10.4), 16.6);
+//     }
+// }
+
 @function gen-color($color, $saturation) {
-    @if($saturation==50) {
+    @if ($saturation==50) {
         @return lighten(saturate($color, 10.4), 37.7);
     }
     @else if ($saturation==100) {
@@ -27,22 +69,22 @@
         @return lighten(desaturate($color, 17), 18.7);
     }
     @else if ($saturation==300) {
-        @return lighten(desaturate($color, 20.9), 9.1);
+        @return lighten(desaturate($color, 12.9), 9.1);
     }
     @else if ($saturation==400) {
         @return lighten(desaturate($color, 6.6), 4.1);
     }
     @else if ($saturation==600) {
-        @return darken(desaturate($color, 12.4), 3.1);
+        @return darken(saturate($color, 12.4), 5.1);
     }
     @else if ($saturation==700) {
-        @return darken(desaturate($color, 24.5), 7.8);
+        @return darken(saturate($color, 24.5), 8.8);
     }
     @else if ($saturation==800) {
-        @return darken(desaturate($color, 23.2), 11.7);
+        @return darken(saturate($color, 23.2), 12.7);
     }
     @else if ($saturation==900) {
-        @return darken(desaturate($color, 16.1), 17);
+        @return darken(saturate($color, 16.1), 17);
     }
     @else if ($saturation=='A100') {
         @return lighten(saturate($color, 10.4), 16.7);
@@ -86,8 +128,12 @@
 // @access public
 // @param {String} $n - Background color
 @function text-contrast($n) {
-    $color-brightness: round((red($n) * 299) + (green($n) * 587) + (blue($n) * 114) / 1000);
-    $light-color: round((red(#FFF) * 299) + (green(#FFF) * 587) + (blue(#FFF) * 114) / 1000);
+    $color-brightness: round(
+         (red($n) * 299) + (green($n) * 587) + (blue($n) * 114) / 1000
+    );
+    $light-color: round(
+         (red(#FFF) * 299) + (green(#FFF) * 587) + (blue(#FFF) * 114) / 1000
+    );
     @if abs($color-brightness) < ($light-color / 2) {
         @return #FFF;
     }
@@ -100,8 +146,27 @@
 // @param {*} $value - Value to test
 // @return {Bool}
 @function is-direction($value) {
-    $is-keyword: index((to top, to top right, to right top, to right, to bottom right, to right bottom, to bottom, to bottom left, to left bottom, to left, to left top, to top left), $value);
-    $is-angle: type-of($value)=='number' and index('deg' 'grad' 'turn' 'rad', unit($value));
+    $is-keyword: index(
+
+        (
+            to top,
+            to top right,
+            to right top,
+            to right,
+            to bottom right,
+            to right bottom,
+            to bottom,
+            to bottom left,
+            to left bottom,
+            to left,
+            to left top,
+            to top left
+        ),
+        $value
+    );
+    $is-angle: type-of($value)=='number'
+        and
+        index('deg' 'grad' 'turn' 'rad', unit($value));
     @return $is-keyword or $is-angle;
 }
 
@@ -111,10 +176,23 @@
 // @require {function} convert-angle
 // @throw Cannot convert `#{$value}` to legacy syntax because it doesn't seem to be a direction.;
 @function legacy-direction($value) {
-    @if is-direction($value)==false {
+    @if is-direction($value) ==false {
         @error 'Cannot convert `#{$value}` to legacy syntax because it doesn\'t seem to be a direction.';
     }
-    $conversion-map: ( to top: bottom, to top right: bottom left, to right top: left bottom, to right: left, to bottom right: top left, to right bottom: left top, to bottom: top, to bottom left: top right, to left bottom: right top, to left: right, to left top: right bottom, to top left: bottom right);
+    $conversion-map: (
+        to top: bottom,
+        to top right: bottom left,
+        to right top: left bottom,
+        to right: left,
+        to bottom right: top left,
+        to right bottom: left top,
+        to bottom: top,
+        to bottom left: top right,
+        to left bottom: right top,
+        to left: right,
+        to left top: right bottom,
+        to top left: bottom right
+    );
     @if map-has-key($conversion-map, $value) {
         @return map-get($conversion-map, $value);
     }
@@ -133,7 +211,7 @@
     }
     @else {
         $box-shadow: #{'0 #{$ambient-y}px #{$blur}px rgba(0, 0, 0, #{$ambient-alpha})'},
- #{'0 #{$direct-y}px #{$blur}px rgba(0, 0, 0, #{$direct-alpha})'};
- @return $box-shadow;
+            #{'0 #{$direct-y}px #{$blur}px rgba(0, 0, 0, #{$direct-alpha})'};
+        @return $box-shadow;
     }
 }
