--- a/demos/app/app.component.css
+++ b/demos/app/app.component.css
@@ -1,10 +1,10 @@
 .aside ::-webkit-scrollbar {
     width: 3px;
-    background: #E4E4E4;
+    background: #e4e4e4;
 }
 
 .aside ::-webkit-scrollbar-thumb {
-    background: #EC6F74;
+    background: #ec6f74;
     border-radius: 0;
 }
 
@@ -39,7 +39,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    border-right: 1px solid #E4E4E4;
+    border-right: 1px solid #e4e4e4;
     overflow-y: scroll;
     overflow-x: hidden;
 }
@@ -66,11 +66,11 @@
 }
 
 .nav-item.active {
-    background-color: #F6E7EC;
+    background-color: #fcc5de;
 }
 
 .nav-item:hover {
-    background-color: #F0F0F0;
+    background-color: #f0f0f0;
 }
 
 .nav-item > * + * {
@@ -79,7 +79,7 @@
 
 .nav-item.header {
     font-size: 16px;
-    color: #9C9C9C;
+    color: #9c9c9c;
     font-weight: 400;
     cursor: initial;
 }
