Mainly typography changes and adjustments.

--- a/src/themes/material/extends/_navbar.scss
+++ b/src/themes/material/extends/_navbar.scss
@@ -27,6 +27,7 @@
 }
 
 %igx-navbar-title {
+    margin: $navbar-title-margin;
     font-size: $navbar-title-fz;
     line-height: $navbar-title-lh;
 }
