--- a/src/themes/base/_base.scss
+++ b/src/themes/base/_base.scss
@@ -4,9 +4,8 @@ html {
     box-sizing: border-box;
 }
 
-*,
-*::after,
-*::before {
+*, *::after, *::before {
     box-sizing: inherit;
 }
 $browser-context: 16px;
+$browser-line-height: 27px;
