--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -32,12 +32,12 @@
 
 // 1. Colors //
 // Base colors
-$rich-black: #0B3C49 !default;
+$rich-black: #0b3c49 !default;
 $byzantium: #731963 !default;
-$vivid-cerise: #E41C77 !default;
-$yellow-orange: #FBB13C !default;
-$ocean-blue: #0375BE !default;
-$white: #FFF !default;
+$vivid-cerise: #e41c77 !default;
+$yellow-orange: #fbb13c !default;
+$ocean-blue: #0375be !default;
+$white: #fff !default;
 
 // Main Theme Colors
 $primary-color: $ocean-blue !default;
@@ -117,86 +117,61 @@ $gray: palette(gray) !default;
 $lightgray: palette(gray, 400) !default;
 $overlay-color: $gray !default;
 $disabled-color: $lightgray !default;
-$success-color: #4CAF50 !default;
-$error-color: #F44336 !default;
+$success-color: #4caf50 !default;
+$error-color: #f44336 !default;
 $warn-color: $yellow-orange !default;
 
 // 2. Material Elevations / Shadows //
-$elevate-1: 0 1px 3px 0 palette(gray, 400),
-    0 1px 1px 0 palette(gray, 300),
+$elevate-1: 0 1px 3px 0 palette(gray, 400), 0 1px 1px 0 palette(gray, 300),
     0 2px 1px -1px palette(gray, 200);
-$elevate-2: 0 1px 5px 0 palette(gray, 400),
-    0 2px 2px 0 palette(gray, 300),
+$elevate-2: 0 1px 5px 0 palette(gray, 400), 0 2px 2px 0 palette(gray, 300),
     0 3px 1px -2px palette(gray, 200);
-$elevate-3: 0 1px 8px 0 palette(gray, 400),
-    0 3px 4px 0 palette(gray, 300),
+$elevate-3: 0 1px 8px 0 palette(gray, 400), 0 3px 4px 0 palette(gray, 300),
     0 3px 3px -2px palette(gray, 200);
-$elevate-4: 0 2px 4px -1px palette(gray, 400),
-    0 4px 5px 0 palette(gray, 300),
+$elevate-4: 0 2px 4px -1px palette(gray, 400), 0 4px 5px 0 palette(gray, 300),
     0 1px 10px 0 palette(gray, 200);
-$elevate-5: 0 3px 5px -1px palette(gray, 400),
-    0 5px 8px 0 palette(gray, 300),
+$elevate-5: 0 3px 5px -1px palette(gray, 400), 0 5px 8px 0 palette(gray, 300),
     0 1px 14px 0 palette(gray, 200);
-$elevate-6: 0 3px 5px -1px palette(gray, 400),
-    0 6px 10px 0 palette(gray, 300),
+$elevate-6: 0 3px 5px -1px palette(gray, 400), 0 6px 10px 0 palette(gray, 300),
     0 1px 18px 0 palette(gray, 200);
-$elevate-7: 0 4px 5px -2px palette(gray, 400),
-    0 7px 10px 1px palette(gray, 300),
+$elevate-7: 0 4px 5px -2px palette(gray, 400), 0 7px 10px 1px palette(gray, 300),
     0 2px 16px 1px palette(gray, 200);
-$elevate-8: 0 5px 5px -3px palette(gray, 400),
-    0 8px 10px 1px palette(gray, 300),
+$elevate-8: 0 5px 5px -3px palette(gray, 400), 0 8px 10px 1px palette(gray, 300),
     0 3px 14px 2px palette(gray, 200);
 $elevate-8-up: 0 -2px 4px -1px palette(gray, 400),
-    0 -4px 5px 0 palette(gray, 300),
-    0 -1px 10px 0 palette(gray, 200);
-$elevate-9: 0 5px 6px -3px palette(gray, 400),
-    0 9px 12px 1px palette(gray, 300),
+    0 -4px 5px 0 palette(gray, 300), 0 -1px 10px 0 palette(gray, 200);
+$elevate-9: 0 5px 6px -3px palette(gray, 400), 0 9px 12px 1px palette(gray, 300),
     0 3px 16px 2px palette(gray, 200);
 $elevate-10: 0 6px 6px -3px palette(gray, 400),
-    0 10px 14px 1px palette(gray, 300),
-    0 4px 18px 3px palette(gray, 200);
+    0 10px 14px 1px palette(gray, 300), 0 4px 18px 3px palette(gray, 200);
 $elevate-11: 0 6px 7px -4px palette(gray, 400),
-    0 11px 15px 1px palette(gray, 300),
-    0 4px 20px 3px palette(gray, 200);
+    0 11px 15px 1px palette(gray, 300), 0 4px 20px 3px palette(gray, 200);
 $elevate-12: 0 7px 8px -4px palette(gray, 400),
-    0 12px 17px 2px palette(gray, 300),
-    0 5px 22px 4px palette(gray, 200);
+    0 12px 17px 2px palette(gray, 300), 0 5px 22px 4px palette(gray, 200);
 $elevate-13: 0 7px 8px -4px palette(gray, 400),
-    0 13px 19px 2px palette(gray, 300),
-    0 5px 24px 4px palette(gray, 200);
+    0 13px 19px 2px palette(gray, 300), 0 5px 24px 4px palette(gray, 200);
 $elevate-14: 0 7px 9px -4px palette(gray, 400),
-    0 14px 21px 2px palette(gray, 300),
-    0 5px 26px 4px palette(gray, 200);
+    0 14px 21px 2px palette(gray, 300), 0 5px 26px 4px palette(gray, 200);
 $elevate-15: 0 8px 9px -5px palette(gray, 400),
-    0 15px 22px 2px palette(gray, 300),
-    0 6px 28px 5px palette(gray, 200);
+    0 15px 22px 2px palette(gray, 300), 0 6px 28px 5px palette(gray, 200);
 $elevate-16: 0 8px 10px -5px palette(gray, 400),
-    0 16px 24px 2px palette(gray, 300),
-    0 6px 30px 5px palette(gray, 200);
+    0 16px 24px 2px palette(gray, 300), 0 6px 30px 5px palette(gray, 200);
 $elevate-17: 0 8px 11px -5px palette(gray, 400),
-    0 17px 26px 2px palette(gray, 300),
-    0 6px 32px 5px palette(gray, 200);
+    0 17px 26px 2px palette(gray, 300), 0 6px 32px 5px palette(gray, 200);
 $elevate-18: 0 9px 11px -5px palette(gray, 400),
-    0 18px 28px 2px palette(gray, 300),
-    0 7px 34px 6px palette(gray, 200);
+    0 18px 28px 2px palette(gray, 300), 0 7px 34px 6px palette(gray, 200);
 $elevate-19: 0 9px 12px -6px palette(gray, 400),
-    0 19px 29px 2px palette(gray, 300),
-    0 7px 36px 6px palette(gray, 200);
+    0 19px 29px 2px palette(gray, 300), 0 7px 36px 6px palette(gray, 200);
 $elevate-20: 0 10px 13px -6px palette(gray, 400),
-    0 20px 31px 3px palette(gray, 300),
-    0 8px 38px 7px palette(gray, 200);
+    0 20px 31px 3px palette(gray, 300), 0 8px 38px 7px palette(gray, 200);
 $elevate-21: 0 10px 13px -6px palette(gray, 400),
-    0 21px 33px 3px palette(gray, 300),
-    0 8px 40px 7px palette(gray, 200);
+    0 21px 33px 3px palette(gray, 300), 0 8px 40px 7px palette(gray, 200);
 $elevate-22: 0 10px 14px -6px palette(gray, 400),
-    0 22px 35px 3px palette(gray, 300),
-    0 8px 42px 7px palette(gray, 200);
+    0 22px 35px 3px palette(gray, 300), 0 8px 42px 7px palette(gray, 200);
 $elevate-23: 0 11px 14px -7px palette(gray, 400),
-    0 23px 36px 3px palette(gray, 300),
-    0 9px 44px 8px palette(gray, 200);
+    0 23px 36px 3px palette(gray, 300), 0 9px 44px 8px palette(gray, 200);
 $elevate-24: 0 11px 15px -7px palette(gray, 400),
-    0 24px 38px 3px palette(gray, 300),
-    0 9px 46px 8px palette(gray, 200);
+    0 24px 38px 3px palette(gray, 300), 0 9px 46px 8px palette(gray, 200);
 
 // 2. Badges //
 $badge-width: 22px !default;
@@ -251,17 +226,15 @@ $button-focus-gradient: linear-gradient(
     )
     !default;
 $button-gradient-color: $white !default;
-$button-gradient-shadow: 0
-    4px
-    10px -2px
-    darken(transparentize($button-gradient-color-2, .2), 20%)
-    !default;
+$button-gradient-shadow: 0 4px 10px -2px darken(
+        transparentize($button-gradient-color-2, .2),
+        20%
+    ) !default;
 
-$button-gradient-focus-shadow: 0
-    6px
-    12px -1px
-    darken(transparentize($button-gradient-color-2, .25), 25%)
-    !default;
+$button-gradient-focus-shadow: 0 6px 12px -1px darken(
+        transparentize($button-gradient-color-2, .25),
+        25%
+    ) !default;
 // Flat Buttons
 $button-flat-color: palette(secondary) !default;
 $button-flat-color-disabled: $disabled-color !default;
@@ -301,11 +274,8 @@ $card-content-fz: em(14px, 16px) !default;
 $card-content-lh: (20px, 16px) !default;
 
 // Padding & Margin
-$card-heading-padding: em(24px, 16px)
-    em(16px, 16px)
-    em(16px, 16px)
-    em(16px, 16px)
-    !default;
+$card-heading-padding: em(24px, 16px) em(16px, 16px) em(16px, 16px)
+    em(16px, 16px) !default;
 $card-heading-compact-padding: em(16px, 16px) !default;
 $card-heading-margin: 0 !default;
 $card-content-padding: em(16px, 16px) !default;
@@ -450,7 +420,7 @@ $navbar-padding: 0 em(16px) !default;
 $navbar-text-color: set-color(palette(primary)) !default;
 $navbar-title-fz: em(18px, 16px) !default;
 $navbar-title-lh: em(18px, 16px) !default;
-
+$navbar-title-margin: 0;
 // 13. Navigation Drawer //
 $navdrawer-pin-collapsed-padding: 0;
 
@@ -529,44 +499,56 @@ $toast-line-height: em(24px, 16px) !default;
 
 // 19. Typography //
 // paragraph
-$paragraph-line-height-desktop: em(22px) !default;
-$paragraph-line-height-phone: em(20px) !default;
+$paragraph-margin-top: 0;
+$paragraph-margin-bottom: rem(27px);
+$paragraph-line-height-desktop: rem(27px) !default;
+$paragraph-line-height-phone: rem(22px) !default;
 // H1
-$h1-font-size-desktop: em(48px) !default;
-$h1-line-height-desktop: em(54px) !default;
-$h1-font-size-tablet: em(40px) !default;
-$h1-line-height-tablet: em(45px) !default;
-$h1-font-size-phone: em(32px) !default;
-$h1-line-height-phone: em(40px) !default;
-// H2
-$h2-font-size-desktop: em(36px) !default;
-$h2-line-height-desktop: em(45px) !default;
-$h2-font-size-tablet: em(32px) !default;
-$h2-line-height-tablet: em(40px) !default;
-$h2-font-size-phone: em(26px) !default;
-$h2-line-height-phone: em(30px) !default;
-// H3
-$h3-font-size-desktop: em(28px) !default;
-$h3-line-height-desktop: em(35px) !default;
-$h3-font-size-tablet: em(24px) !default;
-$h3-line-height-tablet: em(30px) !default;
-$h3-font-size-phone: em(22px) !default;
-$h3-line-height-phone: em(25px) !default;
-// H4
-$h4-font-size-desktop: em(18px) !default;
-$h4-line-height-desktop: em(22px) !default;
-$h4-font-size-tablet: em(18px) !default;
-$h4-line-height-tablet: em(22px) !default;
-$h4-font-size-phone: em(22px) !default;
-$h4-line-height-phone: em(20px) !default;
-// Blockquote
-$blockquote-font-size-desktop: em(24px) !default;
-$blockquote-line-height-desktop: em(35px) !default;
-$blockquote-font-size-tablet: em(24px) !default;
-$blockquote-line-height-tablet: em(35px) !default;
-$blockquote-font-size-phone: em(20px) !default;
-$blockquote-line-height-phone: em(25px) !default;
+$h1-margin-top: rem(27px) !default;
+$h1-margin-bottom: rem(54px);
 
+$h1-font-size-desktop: rem(48px) !default;
+$h1-line-height-desktop: rem(54px) !default;
+$h1-font-size-tablet: rem(40px) !default;
+$h1-line-height-tablet: rem(45px) !default;
+$h1-font-size-phone: rem(32px) !default;
+$h1-line-height-phone: rem(40px) !default;
+// H2
+$h2-margin-top: rem(27px);
+$h2-margin-bottom: rem(27px);
+
+$h2-font-size-desktop: rem(36px) !default;
+$h2-line-height-desktop: rem(45px) !default;
+$h2-font-size-tablet: rem(32px) !default;
+$h2-line-height-tablet: rem(40px) !default;
+$h2-font-size-phone: rem(26px) !default;
+$h2-line-height-phone: rem(30px) !default;
+// H3
+$h3-margin-top: rem(27px);
+$h3-margin-bottom: 0;
+
+$h3-font-size-desktop: rem(28px) !default;
+$h3-line-height-desktop: rem(35px) !default;
+$h3-font-size-tablet: rem(24px) !default;
+$h3-line-height-tablet: rem(30px) !default;
+$h3-font-size-phone: rem(22px) !default;
+$h3-line-height-phone: rem(27px) !default;
+// H4
+$h4-margin-top: rem(27px);
+$h4-margin-bottom: 0;
+$h4-font-size-desktop: rem(18px) !default;
+$h4-line-height-desktop: rem(22px) !default;
+$h4-font-size-tablet: rem(18px) !default;
+$h4-line-height-tablet: rem(22px) !default;
+$h4-font-size-phone: rem(22px) !default;
+$h4-line-height-phone: rem(27px) !default;
+// Blockquote
+$blockquote-font-size-desktop: rem(24px) !default;
+$blockquote-line-height-desktop: rem(35px) !default;
+$blockquote-font-size-tablet: rem(24px) !default;
+$blockquote-line-height-tablet: rem(35px) !default;
+$blockquote-font-size-phone: rem(20px) !default;
+$blockquote-line-height-phone: rem(27px) !default;
 // 22. Progress Bar //
 $progressbar-color: rgba(palette(primary), .1) !default;
 $progressbar-stripe-color: transparentize($white, .5) !default;
@@ -618,10 +600,7 @@ $dialog-message-padding-bottom: em(12px) !default;
 $dialog-message-color: $darkgray !default;
 $dialog-message-font-weight: 400 !default;
 $dialog-actions-padding: em(8px) !default;
-$dialog-actions-margin: 0
-    em(-24px, 16px)
-    em(-12px, 16px)
-    em(-24px, 16px)
+$dialog-actions-margin: 0 em(-24px, 16px) em(-12px, 16px) em(-24px, 16px)
     !default;
 
 // 25. Snackbar
