--- a/src/themes/material/modules/_typography.scss
+++ b/src/themes/material/modules/_typography.scss
@@ -3,9 +3,12 @@ $font-weight-headings: 600;
 
 a {
     text-decoration: none;
+    color: palette(secondary, 500);
 }
 
 html {
+    font-size: $browser-context;
+    line-height: $browser-line-height;
     font-size-adjust: 100%;
     font-family: 'Titillium Web', sans-serif;
     font-weight: $font-weight;
@@ -13,33 +16,101 @@ html {
     -webkit-font-smoothing: antialiased;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-weight: $font-weight-headings;
+}
+
+ul,
+ol,
+pre,
+table,
+blockquote {
+    margin-top: 0;
+    margin-bottom: 1.6875rem;
+}
+ul ul,
+ol ol,
+ul ol,
+ol ul {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+blockquote {
+    font-size: $blockquote-font-size-desktop;
+    line-height: $blockquote-line-height-tablet;
+    font-style: italic;
+    &::before,
+    &::after {
+        content: '\'';
+    }
+}
+
+/* Let's make sure all's aligned */
+hr {
+    margin: -1px 0;
+    border: 1px solid;
+}
+a,
+b,
+i,
+strong,
+em,
+small,
+code {
+    line-height: 0;
+}
+sub,
+sup {
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
+}
+sup {
+    top: -0.5em;
+}
+sub {
+    bottom: -0.25em;
 }
 
 @media only screen and (min-width: 0) {
     h1 {
         font-size: $h1-font-size-phone;
         line-height: $h1-line-height-phone;
+        margin-top: $h1-margin-top;
+        margin-bottom: $h1-margin-bottom;
     }
 
     h2 {
         font-size: $h2-font-size-phone;
         line-height: $h2-line-height-phone;
+        margin-top: $h2-margin-top;
+        margin-bottom: $h2-margin-bottom;
     }
 
     h3 {
         font-size: $h3-font-size-phone;
         line-height: $h3-line-height-phone;
+        margin-top: $h3-margin-top;
+        margin-bottom: $h3-margin-bottom;
     }
 
     h4 {
         font-size: $h4-font-size-phone;
         line-height: $h4-line-height-phone;
+        margin-top: $h4-margin-top;
+        margin-bottom: $h4-margin-bottom;
     }
 
     p {
         line-height: $paragraph-line-height-phone;
+        margin-top: $paragraph-margin-top;
+        margin-bottom: $paragraph-margin-bottom;
     }
 }
 
@@ -47,25 +118,35 @@ h1, h2, h3, h4, h5, h6 {
     h1 {
         font-size: $h1-font-size-tablet;
         line-height: $h1-line-height-tablet;
+        margin-top: $h1-margin-top;
+        margin-bottom: $h1-margin-bottom;
     }
 
     h2 {
         font-size: $h2-font-size-tablet;
         line-height: $h2-line-height-tablet;
+        margin-top: $h2-margin-top;
+        margin-bottom: $h2-margin-bottom;
     }
 
     h3 {
         font-size: $h3-font-size-tablet;
         line-height: $h3-line-height-tablet;
+        margin-top: $h3-margin-top;
+        margin-bottom: $h3-margin-bottom;
     }
 
     h4 {
         font-size: $h4-font-size-tablet;
         line-height: $h4-line-height-tablet;
+        margin-top: $h4-margin-top;
+        margin-bottom: $h4-margin-bottom;
     }
 
     p {
         line-height: $paragraph-line-height-desktop;
+        margin-top: $paragraph-margin-top;
+        margin-bottom: $paragraph-margin-bottom;
     }
 }
 
@@ -73,20 +154,33 @@ h1, h2, h3, h4, h5, h6 {
     h1 {
         font-size: $h1-font-size-desktop;
         line-height: $h1-line-height-desktop;
+        margin-top: $h1-margin-top;
+        margin-bottom: $h1-margin-bottom;
     }
 
     h2 {
         font-size: $h2-font-size-desktop;
         line-height: $h2-line-height-desktop;
+        margin-top: $h2-margin-top;
+        margin-bottom: $h2-margin-bottom;
     }
 
     h3 {
         font-size: $h3-font-size-desktop;
         line-height: $h3-line-height-desktop;
+        margin-top: $h3-margin-top;
+        margin-bottom: $h3-margin-bottom;
     }
 
     h4 {
         font-size: $h4-font-size-desktop;
         line-height: $h4-line-height-desktop;
+        margin-top: $h4-margin-top;
+        margin-bottom: $h4-margin-bottom;
+    }
+
+    p {
+        margin-top: $paragraph-margin-top;
+        margin-bottom: $paragraph-margin-bottom;
     }
 }
