Add basic calendar demo component.

--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -23,6 +23,11 @@
                         <span>Button Group</span>
                     </span>
 
+                    <span class="nav-item" [routerLinkActive]="'active'" routerLink="/calendar">
+                        <i class="material-icons">event</i>
+                        <span>Calendar</span>
+                    </span>
+
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/card">
                         <i class="material-icons">home</i>
                         <span>Card</span>
