--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -323,6 +323,12 @@ $cal-value-selected-bg: $cal-theme-color !default;
 $cal-value-current: $cal-theme-color !default;
 $cal-value-weekend: $disabled-color !default;
 $cal-value-hover-bg: $off-white !default;
+$cal-value-year-fs: em(18px, 16px) !default;
+$cal-value-year-hover-fs: em(27px, 16px) !default;
+$cal-value-year-hover-color: $cal-theme-color !default;
+$cal-value-month-hover-color: $cal-theme-color !default;
+$cal-value-month-margin: 0 em(12px, 16px) !default;
+$cal-value-month-height: 72px !default;
 // Calendar Body
 $cal-row-padding: 0 em(16px, 16px) !default;
 
