Change calendar sample to be inside a card.

--- a/demos/app/calendar/sample.component.html
+++ b/demos/app/calendar/sample.component.html
@@ -10,7 +10,9 @@
 
         <article class="sample-column">
             <h4 class="sample-title">Calendar</h4>
-            <igx-calendar weekStart="1"></igx-calendar>
+            <igx-card>
+                <igx-calendar weekStart="1"></igx-calendar>
+            </igx-card>
         </article>
 
     </section>
