--- a/src/calendar/calendar.component.html
+++ b/src/calendar/calendar.component.html
@@ -9,16 +9,16 @@
 
     <div *ngIf="isDefaultView" class="igx-calendar__body">
         <div class="igx-calendar__body-picker">
-            <span class="prev" (click)="prevMonth()">
+            <div class="prev" (click)="prevMonth()">
                 <i class="material-icons">keyboard_arrow_left</i>
-            </span>
-            <span class="date">
-                <span (click)="activeViewYear()">{{ getMonthName(viewDate) }}</span>
-            <span (click)="activeViewDecade()">{{ currentYear }}</span>
-            </span>
-            <span class="next" (click)="nextMonth()">
+            </div>
+            <div class="date">
+                <span (click)="activeViewYear()" class="date__el">{{ getMonthName(viewDate) }}</span>
+                <span (click)="activeViewDecade()" class="date__el">{{ currentYear }}</span>
+            </div>
+            <div class="next" (click)="nextMonth()">
                 <i class="material-icons">keyboard_arrow_right</i>
-            </span>
+            </div>
         </div>
 
         <div class="igx-calendar__body-row">
@@ -28,7 +28,7 @@
         </div>
         <div *ngFor="let week of getMonth; trackBy:rowTracker" class="igx-calendar__body-row" (click)="onDateClick($event)">
             <span *ngFor="let day of week; trackBy:dateTracker" [attr.data-prevmonth]="day.isPrevMonth ? true : null" [attr.data-nextmonth]="day.isNextMonth ? true : null"
-                [class.igx-calendar__date--inactive]="isInactive(day)" [class.igx-calendar__date]="day.isCurrentMonth && !isWeekend(day)"
+                [class.igx-calendar__date--inactive]="isInactive(day)" [class.igx-calendar__date]="day.isCurrentMonth && !isWeekend(day) && !isSelected(day)"
                 [class.igx-calendar__date--weekend]="isWeekend(day)" [class.igx-calendar__date--current]="isToday(day) && !isSelected(day)"
                 [class.igx-calendar__date--selected]="isSelected(day)">
                 {{ day.date.getDate() }}
