--- a/src/date-picker/date-picker.component.html
+++ b/src/date-picker/date-picker.component.html
@@ -1,6 +1,6 @@
 <div class="igx-date-picker">
-    <input igxInput (click)="onOpened($event)" [value]="displayData"  />
-    <igx-dialog #alert closeOnOutsideSelect="true">
-        <igx-calendar (onSelection)="handleSelection($event)"></igx-calendar>
+    <input class="igx-date-picker__input-date" igxInput (click)="onOpened($event)" [value]="_displayData"  />
+    <igx-dialog class="igx-date-picker__dialog-popup" #alert closeOnOutsideSelect="true">
+        <igx-calendar class="igx-date-picker__calendar" (onSelection)="handleSelection($event)"></igx-calendar>
     </igx-dialog>
 </div>
