Updated slider value properties
Changed slider to have only one value property for dual and single
thumbs

--- a/demos/app/range/sample.component.html
+++ b/demos/app/range/sample.component.html
@@ -15,7 +15,8 @@
 
         <article class="sample-column">
             <h4 class="sample-title">Two-handle range slider</h4>
-            <igx-range #range2 [type]="sliderType" [lowerValue]="30" [upperValue]="60" [minValue]="0" [maxValue]="100">
+            <igx-range #range2 [type]="sliderType" [(ngModel)]="rangeValue"
+                       [minValue]="0" [maxValue]="100">
             </igx-range>
         </article>
 
