Added step support

--- a/src/range/range.component.html
+++ b/src/range/range.component.html
@@ -1,7 +1,7 @@
 <div class="igx-range"
      #range
-     (panstart)="update($event)"
-     (panend)="update($event)"
+     (panstart)="onPanStart($event)"
+     (panend)="onPanEnd($event)"
      (pan)="update($event)"
      (tap)="update($event)">
     <div class="igx-range__track">
@@ -14,15 +14,15 @@
              *ngIf="isMulti" class="igx-range__thumb-from"
              tabindex="1"
              [ngClass]="{ 'igx-range__thumb-from--active': isActiveLabel }" #thumbFrom>
-            <span class="label">{{ formatValue(value.lower) }}</span>
+            <span class="label">{{ value.lower }}</span>
             <span class="dot"></span>
         </div>
         <div (keydown)="onKeyDown($event)" (keyup)="hideThumbLabels()" (blur)="hideThumbLabels()"
              (focus)="onFocus($event)" class="igx-range__thumb-to"
              tabindex="1"
              [ngClass]="{ 'igx-range__thumb-to--active': isActiveLabel }" #thumbTo>
-            <span *ngIf="isMulti" class="label">{{ formatValue(value.upper) }}</span>
-            <span *ngIf="!isMulti" class="label">{{ formatValue(value) }}</span>
+            <span *ngIf="isMulti" class="label">{{ value.upper }}</span>
+            <span *ngIf="!isMulti" class="label">{{ value }}</span>
             <span class="dot"></span>
         </div>
     </div>
