--- a/src/snackbar/snackbar.component.html
+++ b/src/snackbar/snackbar.component.html
@@ -1,11 +1,7 @@
-<div class="igx-snackbar" *ngIf="isVisible" 
-    (@slideInOut.start)="snackbarAnimationStarted($event)"
-    (@slideInOut.done)="snackbarAnimationDone($event)"
-    [@slideInOut]="'show'"
->
-    <span class="igx-snackbar__message" [@fadeInOut]>{{ message }}</span>
-    <button class="igx-snackbar__button" igxRipple="white" *ngIf="actionText" [@fadeInOut]
-        (click)="triggerAction(snackbar)">
+<div class="igx-snackbar" *ngIf="isVisible" (@slideInOut.start)="snackbarAnimationStarted($event)" (@slideInOut.done)="snackbarAnimationDone($event)"
+    [@slideInOut]="isVisible">
+    <span class="igx-snackbar__message" [@fadeInOut]="isVisible">{{ message }}</span>
+    <button class="igx-snackbar__button" igxRipple="white" *ngIf="actionText" [@fadeInOut] (click)="triggerAction(snackbar)">
             {{ actionText }}
     </button>
 </div>
