Add animations to the calendar component.

--- a/demos/app/calendar/sample.component.html
+++ b/demos/app/calendar/sample.component.html
@@ -9,11 +9,18 @@
     <section class="sample-content">
 
         <article class="sample-column">
-            <h4 class="sample-title">Calendar</h4>
-            <igx-card>
-                <igx-calendar weekStart="1"></igx-calendar>
-            </igx-card>
+            <div class="calendar-sample">
+                <h4 class="sample-title">Default Calendar</h4>
+                <igx-card>
+                    <igx-calendar weekStart="1"></igx-calendar>
+                </igx-card>
+            </div>
+            <div class="calendar-sample">
+                <h4 class="sample-title">Range Calendar</h4>
+                <igx-card>
+                    <igx-calendar weekStart="1" selection="range"></igx-calendar>
+                </igx-card>
+            </div>
         </article>
-
     </section>
 </div>
